WEB-03: Fix problem with spacing in title

--- a/src/components/header/header.style.css
+++ b/src/components/header/header.style.css
@@ -39,6 +39,7 @@
         padding: 0;
         flex-direction: column;
         gap: 0.2rem;
+        line-height: 0;
 
         small {
             height: 1rem;
